modules/security_groups/main.tf
resource "aws_security_group" "alb" {
        name = "${var.project_name}-alb-sg"
        description = "Security group for ALB"
        vpc_id = var.vpc_id
        ingress {
                from_port = 80
                to_port = 80
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
        }
        ingress {
                from_port = 443
                to_port = 443
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
        }
        egress {
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
        }      
        tags = {
                Name = "${var.project_name}-alb-sg"
                Environment = "${var.environment}"
            }

}

resource "aws_security_group" "ec2" {
        name = "${var.project_name}-ec2-sg"
        description = "Security group for EC2 instances"
        vpc_id = var.vpc_id
        ingress {
                from_port = 80
                to_port = 80
                protocol = "tcp"
                security_groups = [aws_security_group.alb.id]
        }
        egress {
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
        }
        tags = {
                Name = "${var.project_name}-ec2-sg"
                Environment = "${var.environment}"

        }
}
resource "aws_security_group" "rds" {
        name = "${var.project_name}-rds-sg"
        description = "Security group for RDS instances"
        vpc_id = var.vpc_id
        ingress {
                from_port = 3306
                to_port = 3306
                protocol = "tcp"
                security_groups = [aws_security_group.ec2.id]
        }
        egress {
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
        }
        tags = {
                Name = "${var.project_name}-rds-sg"
                Environment = "${var.environment}"
        }
}
